# elite-pip-macro

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml  makeRelease.yaml
src/: cli.rs  keycodes.rs  main.rs
src/commands/: run.rs
