[package]
name = "elite-pip-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.8.3"
clap = { version = "4.5.2", features = ["derive"] }
rdev = "0.5.3"
rodio = "0.17.3"

[profile.release]
strip = true
